increased screen size for media query to 600px to make sure all phones are covered!

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -239,7 +239,7 @@ footer {
   width: 100%;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .secret-image {
     width: 100%;
   }
